Remove helper .txt

--- a/MommysCookbookProject/home/templates/home/index.html
+++ b/MommysCookbookProject/home/templates/home/index.html
@@ -3,5 +3,5 @@
 {% block main-content %}
     <h1 class="">Mommy's Cookbook</h1>
     <h3>Homepage</h3>
-    <p>Are we there yet?</p>
+    <p>Welcome</p>
 {% endblock %}
