--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Mommy's Cookbook</title>
     <link rel="icon" type="image/x-icon" href="{% static 'images/cookbook_logo.jpg' %}"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
@@ -14,23 +15,30 @@
 
     <style>
         /* Custom CSS for background image */
+
         #background {
             background-image: url("{% static 'images/background-with-kitchen-utensils-vector-24630288.jpg' %}");
+            background-size: contain;
+            background-color: #f5f1e6; /* Fallback background color */
+            height: 95vh;
         }
 
         #overlay {
             background-color: rgba(255, 255, 255, 0.9) !important;
-            min-height: 60vh;
+        {#min-height: 60vh;#}
+        }
+
+        .bg-light-brown {
+            background-color: #f5f1e6;
         }
     </style>
-    <title>Mommy's Cookbook</title>
+
 </head>
 
 <body>
 
 
-
-<header class="navbar navbar-expand-lg">
+<header class="navbar navbar-expand-lg navbar-dark bg-light-brown ">
     <div class="container">
         <!-- Logo and Site Name -->
         <a class="navbar-brand" href="{% url 'index' %}">
@@ -87,27 +95,30 @@
     </div>
 </header>
 
-
-<main class="container-fluid text-center" id="background">
+<main class="container-fluid text-center overflow-auto" id="background">
 
 
     <div class="container">
 
-            <div id="overlay" class="container flex-column justify-content-evenly align-items-center rounded">
+        <div id="overlay" class="container flex-column justify-content-evenly align-items-center rounded">
 
+            {#<div class="container-fluid">#}
+            {##}
+            {#    <div class="justify-content-center mt-30">#}
+            {##}
+            {#        <div class="overlay">#}
+            {##}
+            {#            <main class="flex-column justify-content-evenly align-items-center rounded p-2">#}
+            {% block main-content %}
 
-                {% block main-content %}
+            {% endblock %}
 
-                {% endblock %}
-
-            </div>
+        </div>
 
     </div>
 </main>
 
-{#todo: navbar not visible on long pages#}
-
-<footer class="navbar">
+<footer class="navbar bg-light-brown">
 
     <p class="text-center">Mommy's Cookbook Project,
         <a href="https://softuni.bg/trainings/4110/python-web-framework-june-2023" class="text-secondary">
@@ -117,6 +128,7 @@
     </p>
 
 </footer>
+
 
 
 </body>
