base template bootstrap ready

--- a/MommysCookbookProject/recipe/templates/recipe/recipe_details.html
+++ b/MommysCookbookProject/recipe/templates/recipe/recipe_details.html
@@ -3,7 +3,7 @@
 
 {% block main-content %}
 
-    <div class="container mt-5">
+    <div class="container-fluid mt-5">
         <div class="card">
             <div class="row no-gutters">
                 <div class="col-md-4">
@@ -29,6 +29,15 @@
             <h3 class="card-title">{{ recipe.description }}</h3>
             <h5 class="card-title">DIRECTIONS</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
+                            purus sit amet
+                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
+                            purus sit amet
+                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
+                            purus sit amet
+                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
                             purus sit amet
                             euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.</p>
             </div>
