recipe model updated

--- a/MommysCookbookProject/recipe/templates/recipe/recipe_details.html
+++ b/MommysCookbookProject/recipe/templates/recipe/recipe_details.html
@@ -6,10 +6,10 @@
     <div class="container-fluid mt-5">
         <div class="card">
             <div class="row no-gutters">
-                <div class="col-md-4">
+                <div class="col-md-8" style="max-height: 100vh; overflow: hidden">
                     <img src="{% static 'images/cake_image.jpg' %}" class="card-img" alt="Image">
                 </div>
-                <div class="col-md-8" >
+                <div class="col-md-4" >
                     <div class="card-body">
                         <div>
                             <i class="fa-solid fa-star"></i>
@@ -29,6 +29,42 @@
             <h3 class="card-title">{{ recipe.description }}</h3>
             <h5 class="card-title">DIRECTIONS</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
+                            purus sit amet
+                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
+                            purus sit amet
+                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
+                            purus sit amet
+                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
+                            purus sit amet
+                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.</p>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
+                            purus sit amet
+                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
+                            purus sit amet
+                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
+                            purus sit amet
+                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
+                            purus sit amet
+                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.</p>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
+                            purus sit amet
+                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
+                            purus sit amet
+                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
+                            purus sit amet
+                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
+                            purus sit amet
+                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.</p>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
                             purus sit amet
                             euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
