--- a/MommysCookbookProject/user_auth/templates/user_auth/user_logout.html
+++ b/MommysCookbookProject/user_auth/templates/user_auth/user_logout.html
@@ -17,7 +17,7 @@
         {% csrf_token %}
 
     </form>
-    <p>
+    <p class="mt-3">
         <a href="{{request.META.HTTP_REFERER|escape}}" class="btn btn-secondary text-light btn-block">
             No, go back to previous page
         </a>
