image field added to models

--- a/MommysCookbookProject/recipe/templates/recipe/recipe_details.html
+++ b/MommysCookbookProject/recipe/templates/recipe/recipe_details.html
@@ -7,7 +7,7 @@
         <div class="card">
             <div class="row no-gutters">
                 <div class="col-md-8" style="max-height: 100vh; overflow: hidden">
-                    <img src="{% static 'images/cake_image.jpg' %}" class="card-img" alt="Image">
+                    <img src="{{ recipe.image.url }}" class="card-img" alt="Recipe image">
                 </div>
                 <div class="col-md-4" >
                     <div class="card-body">
@@ -28,54 +28,7 @@
             <div class="row no-gutters">
             <h3 class="card-title">{{ recipe.description }}</h3>
             <h5 class="card-title">DIRECTIONS</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
-                            purus sit amet
-                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
-                            purus sit amet
-                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
-                            purus sit amet
-                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
-                            purus sit amet
-                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.</p>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
-                            purus sit amet
-                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
-                            purus sit amet
-                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
-                            purus sit amet
-                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
-                            purus sit amet
-                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.</p>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
-                            purus sit amet
-                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
-                            purus sit amet
-                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
-                            purus sit amet
-                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
-                            purus sit amet
-                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.</p>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
-                            purus sit amet
-                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
-                            purus sit amet
-                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
-                            purus sit amet
-                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean auctor,
-                            purus sit amet
-                            euismod ullamcorper, dolor elit elementum metus, quis lacinia nunc libero id odio.</p>
+                        <p class="card-text">{{ recipe.instructions }}</p>
             </div>
         </div>
     </div>
