form error messages added

--- a/MommysCookbookProject/user_auth/templates/user_auth/user_change_password.html
+++ b/MommysCookbookProject/user_auth/templates/user_auth/user_change_password.html
@@ -6,15 +6,18 @@
     <h3 class="text-center">Change password</h3>
     <h5 class="text-center mb-3">{{ user.username }}</h5>
 
-    <form action="{% url 'user_change_password' %}" method="post">
+    <form action="{% url 'user_change_password' %}" method="post" class="mb-3">
 
         <div class="form-group mb-2">
+            {{ form.old_password.errors}}
             {{ form.old_password|placeholder:"Enter current password"|add_custom_class:"form-control" }}
         </div>
         <div class="form-group mb-2">
+            {{ form.new_password1.errors}}
             {{ form.new_password1|placeholder:"Enter new password"|add_custom_class:"form-control" }}
         </div>
         <div class="form-group mb-2">
+            {{ form.new_password2.errors}}
             {{ form.new_password2|placeholder:"Repeat new password"|add_custom_class:"form-control" }}
         </div>
 
