--- a/MommysCookbookProject/user_auth/templates/user_auth/user_change_password_success.html
+++ b/MommysCookbookProject/user_auth/templates/user_auth/user_change_password_success.html
@@ -2,9 +2,14 @@
 
 {% block main-content %}
 
-    <h3> Password changed successfully!</h3>
+    <h3 class="mb-4"> Password changed successfully!</h3>
 
-    <a href="{% url "index" %}" class = "btn btn-primary"> Homepage </a>
+    <div class="m-5"><i class="fa-solid fa-clipboard-check" style="font-size: 8rem"></i></div>
+
+    <div class="m-3"><a href="{% url "user_details" %}" class = "btn btn-dark"> Profile </a></div>
+
+    <div class="m-3"><a href="{% url "index" %}" class = "btn btn-secondary"> Homepage </a></div>
+
 
 
 
