--- a/MommysCookbookProject/user_auth/templates/user_auth/user_list.html
+++ b/MommysCookbookProject/user_auth/templates/user_auth/user_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block main-content %}
-    <ul> Recipes list:
+    <ul> User list:
         {% for user in object_list %}
             <li>
 {#                <a href="{% url '' %}">#}
