--- a/MommysCookbookProject/user_auth/templates/user_auth/user_logout.html
+++ b/MommysCookbookProject/user_auth/templates/user_auth/user_logout.html
@@ -3,7 +3,7 @@
 
 {% block main-content %}
 
-    <h4>Log out</h4>
+    <h4 class="mb-4">Log out</h4>
 
     <i class="fa-solid fa-arrow-right-from-bracket" style="font-size: 5rem"></i>
     <p>Are you sure you want to log out?</p>
