--- a/MommysCookbookProject/user_auth/templates/user_auth/user_edit.html
+++ b/MommysCookbookProject/user_auth/templates/user_auth/user_edit.html
@@ -3,19 +3,25 @@
 
 {% block main-content %}
 
-    <h3> Edit profile</h3>
+    <h3 class="m-5"> Edit profile</h3>
     <a href="{% url 'user_change_password' %}" class="btn btn-dark btn-sm text-light"> Change password </a>
     <a href="{% url 'user_delete' %}" class="btn btn-danger btn-sm text-light"> Delete profile </a>
-    <form action="{% url 'user_edit' %}" method="post">
+    <form action="{% url 'user_edit' %}" method="post" class="m-4">
 
 
         <div class="form-group mb-2">
+            <label> Username:</label>
+            {{ form.username.errors }}
             {{ form.username|placeholder:"Enter username"|add_custom_class:"form-control" }}
         </div>
         <div class="form-group mb-2">
+            <label> Email:</label>
+            {{ form.email.errors }}
             {{ form.email|placeholder:"Enter email"|add_custom_class:"form-control" }}
         </div>
         <div class="form-group mb-2">
+            <label> Name:</label>
+            {{ form.screen_name.errors }}
             {{ form.screen_name|placeholder:"Enter name"|add_custom_class:"form-control" }}
         </div>
 
