--- a/MommysCookbookProject/recipe/templates/recipe/recipe_details.html
+++ b/MommysCookbookProject/recipe/templates/recipe/recipe_details.html
@@ -6,12 +6,12 @@
     <div class="container-fluid mt-5">
         <div class="card">
             <div class="row no-gutters">
-                <div class="col-md-8" style="max-height: 100vh; overflow: hidden">
+                <div class="col-md-8">
                     <img src="{{ recipe.image.url }}" class="card-img" alt="Recipe image">
                 </div>
-                <div class="col-md-4" >
+                <div class="col-md-4 px-3 py-5">
                     <div class="card-body">
-                        <div>
+                        <div class="mb-3">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
@@ -19,25 +19,61 @@
                             <i class="fa-regular fa-star"></i>
                         </div>
                         <h2 class="card-title">{{ recipe.title }}</h2>
+                        {% if recipe.prep_time or recipe.cook_time or recipe.servings %}
+                            <div class="container fs-4">
+
+                                {% if recipe.prep_time %}
+                                    <div>
+                                        <small class="fs-6 fst-italic">Prep Time</small>
+                                        <div class="fw-bold">
+                                            <i class="fa-regular fa-clock"></i>
+                                            {{ recipe.prep_time }}
+                                            <span class="fs-6 fst-italic">min</span>
+                                        </div>
+                                    </div>
+                                {% endif %}
+
+                                {% if recipe.cook_time %}
+                                    <div>
+                                        <small class="fs-6 fst-italic">Cook Time</small>
+                                        <div class="fw-bold">
+                                            <i class="fa-solid fa-clock"></i>
+                                            {{ recipe.cook_time }}
+                                            <span class="fs-6 fst-italic">min</span>
+                                        </div>
+                                    </div>
+                                {% endif %}
+
+
+                            </div>
+                        {% endif %}
                         <hr>
-                        <h5 class="card-title">INGREDIENTS</h5>
-                        <p class="card-text">{{ recipe.ingredients }}</p>
+                        <h4 class="card-title">INGREDIENTS</h4>
+                        <p class="card-text">{{ recipe.ingredients|linebreaks }}</p>
                     </div>
                 </div>
             </div>
-            <div class="row no-gutters">
-            <h3 class="card-title">{{ recipe.description }}</h3>
-            <h5 class="card-title">DIRECTIONS</h5>
-                        <p class="card-text">{{ recipe.instructions }}</p>
+            <div class="row no-gutters px-3 py-5">
+                <h5 class="card-text">{{ recipe.description }}</h5>
+                <h4 class="card-title">DIRECTIONS</h4>
+                <p class="card-text">{{ recipe.instructions|linebreaks }}</p>
             </div>
+
+            {% if recipe.owner == request.user %}
+                <div class="row no-gutters px-3 py-5">
+                    <div class="card-body">
+                        <a href="{% url 'recipe_edit' recipe.slug %}" class="btn btn-dark">
+                            Edit recipe
+                        </a>
+                        <a href="{% url 'recipe_delete' recipe.slug %}" class="btn btn-danger text-dark">
+                            Delete recipe
+                        </a>
+                    </div>
+                </div>
+            {% endif %}
+
         </div>
     </div>
 
-
-
-    {#    {% if 'user has rights' %}#}
-    <a href="{% url 'recipe_edit' recipe.slug %}"> Edit recipe </a>
-    <a href="{% url 'recipe_delete' recipe.slug %}"> DELETE </a>
-    {#    {% endif %}#}
 
 {% endblock %}
