--- a/MommysCookbookProject/recipe/templates/recipe/recipe_edit.html
+++ b/MommysCookbookProject/recipe/templates/recipe/recipe_edit.html
@@ -2,7 +2,7 @@
 
 {% block main-content %}
 
-    <h3> Edit single recipe</h3>
+    <h3> Edit Recipe</h3>
 
     <form action="{% url 'recipe_edit' recipe.slug %}" method="post" >
         Edit recipe form
