--- a/MommysCookbookProject/recipe/templates/recipe/recipe_create.html
+++ b/MommysCookbookProject/recipe/templates/recipe/recipe_create.html
@@ -2,15 +2,84 @@
 
 {% block main-content %}
 
-    <h3> Create new recipe</h3>
+    <h3> Create Recipe</h3>
+    <div class="container w-100" style="all: unset;">
+        <form action="{% url 'recipe_create' %}" method="post">
+            {% csrf_token %}
 
-    <form action="{% url 'recipe_create' %}" method="post">
-        New recipe form
-        {{ form.as_p }}
-        <button>Add recipe</button>
 
-        {% csrf_token %}
-    </form>
+{#            <div class="form-group">#}
+{#                <label for="exampleFormControlTextarea1">Example textarea</label>#}
+{#                <textarea class="form-control" id="exampleFormControlTextarea1" rows="20"></textarea>#}
+{#            </div>#}
+            {#        {{ form.as_table }}#}
 
+            <div class="form-outline">
+                {{ form.title.label_tag }}
+                {{ form.title }}
+                {{ form.title.errors }}
+            </div>
+
+
+            <div class="form-outline">
+                {{ form.description.label_tag }}
+                {{ form.description }}
+                {{ form.description.errors }}
+            </div>
+
+
+            <div class="form-outline">
+                {{ form.ingredients.label_tag }}
+                {{ form.ingredients }}
+                {{ form.ingredients.errors }}
+            </div>
+
+
+            <div class="form-outline mb-4">
+                {{ form.prep_time.label_tag }}
+                {{ form.prep_time }}
+                {{ form.prep_time.errors }}
+            </div>
+
+            <div class="col-md-4">
+                <div class="form-group">
+                    {{ form.cook_time.label_tag }}
+                    {{ form.cook_time }}
+                    {{ form.cook_time.errors }}
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    {{ form.servings.label_tag }}
+                    {{ form.servings }}
+                    {{ form.servings.errors }}
+                </div>
+            </div>
+
+
+            <div class="form-group">
+                {{ form.instructions.label_tag }}
+                {{ form.instructions }}
+                {{ form.instructions.errors }}
+            </div>
+
+            <div class="form-group">
+                {{ form.image.label_tag }}
+                {{ form.image }}
+                {{ form.image.errors }}
+            </div>
+
+
+            <input type="hidden" value="{{ next }}" name="next">
+
+            <button class="btn btn-dark text-light">Create Recipe</button>
+
+        </form>
+    </div>
+    <p class="mt-3">
+        <a href="{{ request.META.HTTP_REFERER|escape }}" class="btn btn-secondary text-light">
+            Discard draft and go back to previous page
+        </a>
+    </p>
 
 {% endblock %}
