--- a/MommysCookbookProject/recipe/templates/recipe/recipe_edit.html
+++ b/MommysCookbookProject/recipe/templates/recipe/recipe_edit.html
@@ -1,18 +1,50 @@
 {% extends "base.html" %}
+{% load custom_filters %}
 
 {% block main-content %}
 
-    <h3> Edit Recipe</h3>
+    <div class="container flex-column justify-content-evenly align-items-center">
+        <h1>Edit Recipe</h1>
+        <form action="{% url 'recipe_edit' recipe.slug %}" method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                {{ form.title }}
+                {{ form.title.errors }}
+            </div>
+            <div class="form-group">
+                {{ form.description }}
+                {{ form.description.errors }}
+            </div>
+            <div class="form-group">
+                {{ form.ingredients }}
+                {{ form.ingredients.errors }}
+            </div>
+            <div class="form-group">
+                {{ form.instructions }}
+                {{ form.instructions.errors }}
+            </div>
+            <div class="form-group">
+                {{ form.prep_time }}
+                {{ form.prep_time.errors }}
+            </div>
+            <div class="form-group">
+                {{ form.cook_time }}
+                {{ form.cook_time.errors }}
+            </div>
+            <div class="form-group">
+                {{ form.servings }}
+                {{ form.servings.errors }}
+            </div>
+            <div class="form-group">
+                {{ form.image }}
+                {{ form.image.errors }}
+            </div>
 
-    <form action="{% url 'recipe_edit' recipe.slug %}" method="post" >
-        Edit recipe form
-        {{ form.as_p }}
-        <button class="btn btn-dark">Save changes</button>
-
-        <a href="{% url 'recipe_delete' recipe.slug %}" class="btn btn-dark"> DELETE </a>
-
-        {% csrf_token %}
+    <button class="btn btn-dark">Save changes</button>
     </form>
-
+    <p>
+        <a href="{% url 'recipe_delete' recipe.slug %}" class="btn btn-danger text-dark"> DELETE </a>
+    </p>
+    </div>
 
 {% endblock %}
