--- a/MommysCookbookProject/home/templates/home/index.html
+++ b/MommysCookbookProject/home/templates/home/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "overlay_full_width.html" %}
 
 {% block main-content %}
     <h1 class="">Mommy's Cookbook</h1>
