--- a/MommysCookbookProject/recipe/templates/recipe/recipe_create.html
+++ b/MommysCookbookProject/recipe/templates/recipe/recipe_create.html
@@ -1,73 +1,69 @@
-{% extends "base.html" %}
+{% extends "overlay_full_width.html" %}
 
 {% block main-content %}
 
     <h3> Create Recipe</h3>
-    <div class="container w-100" style="all: unset;">
+    <div class="container">
         <form action="{% url 'recipe_create' %}" method="post">
             {% csrf_token %}
 
 
-{#            <div class="form-group">#}
-{#                <label for="exampleFormControlTextarea1">Example textarea</label>#}
-{#                <textarea class="form-control" id="exampleFormControlTextarea1" rows="20"></textarea>#}
-{#            </div>#}
-            {#        {{ form.as_table }}#}
+        <div class="form-outline mb-4">
+            {{ form.title.label_tag }}
+            {{ form.title }}
+            {{ form.title.errors }}
+        </div>
 
-            <div class="form-outline">
-                {{ form.title.label_tag }}
-                {{ form.title }}
-                {{ form.title.errors }}
-            </div>
+        <div class="form-outline mb-4">
+            {{ form.description.label_tag }}
+            {{ form.description }}
+            {{ form.description.errors }}
+        </div>
 
-
-            <div class="form-outline">
-                {{ form.description.label_tag }}
-                {{ form.description }}
-                {{ form.description.errors }}
-            </div>
-
-
-            <div class="form-outline">
-                {{ form.ingredients.label_tag }}
-                {{ form.ingredients }}
-                {{ form.ingredients.errors }}
-            </div>
-
-
-            <div class="form-outline mb-4">
-                {{ form.prep_time.label_tag }}
-                {{ form.prep_time }}
-                {{ form.prep_time.errors }}
-            </div>
-
-            <div class="col-md-4">
-                <div class="form-group">
-                    {{ form.cook_time.label_tag }}
-                    {{ form.cook_time }}
-                    {{ form.cook_time.errors }}
+        <div class="row">
+            <div class="col-md-9">
+                <div class="form-outline mb-4">
+                    {{ form.ingredients.label_tag }}
+                    {{ form.ingredients }}
+                    {{ form.ingredients.errors }}
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="form-group">
-                    {{ form.servings.label_tag }}
-                    {{ form.servings }}
-                    {{ form.servings.errors }}
+            <div class="col-md-3">
+                <div class="row">
+                    <div class="form-outline mb-4">
+                        {{ form.prep_time.label_tag }}
+                        {{ form.prep_time }}
+                        {{ form.prep_time.errors }}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="form-outline mb-4">
+                        {{ form.cook_time.label_tag }}
+                        {{ form.cook_time }}
+                        {{ form.cook_time.errors }}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="form-outline mb-4">
+                        {{ form.servings.label_tag }}
+                        {{ form.servings }}
+                        {{ form.servings.errors }}
+                    </div>
                 </div>
             </div>
+        </div>
 
+        <div class="form-outline mb-4">
+            {{ form.instructions.label_tag }}
+            {{ form.instructions }}
+            {{ form.instructions.errors }}
+        </div>
 
-            <div class="form-group">
-                {{ form.instructions.label_tag }}
-                {{ form.instructions }}
-                {{ form.instructions.errors }}
-            </div>
-
-            <div class="form-group">
-                {{ form.image.label_tag }}
-                {{ form.image }}
-                {{ form.image.errors }}
-            </div>
+        <div class="form-outline mb-4">
+            {{ form.image.label_tag }}
+            {{ form.image }}
+            {{ form.image.errors }}
+        </div>
 
 
             <input type="hidden" value="{{ next }}" name="next">
