--- a/MommysCookbookProject/recipe/templates/recipe/recipe_edit.html
+++ b/MommysCookbookProject/recipe/templates/recipe/recipe_edit.html
@@ -1,50 +1,76 @@
-{% extends "base.html" %}
+{% extends "overlay_full_width.html" %}
 {% load custom_filters %}
 
 {% block main-content %}
 
-    <div class="container flex-column justify-content-evenly align-items-center">
+
         <h1>Edit Recipe</h1>
         <form action="{% url 'recipe_edit' recipe.slug %}" method="post">
             {% csrf_token %}
-            <div class="form-group">
-                {{ form.title }}
-                {{ form.title.errors }}
+
+
+        <div class="form-outline mb-4">
+            {{ form.title.label_tag }}
+            {{ form.title }}
+            {{ form.title.errors }}
+        </div>
+
+        <div class="form-outline mb-4">
+            {{ form.description.label_tag }}
+            {{ form.description }}
+            {{ form.description.errors }}
+        </div>
+
+        <div class="row">
+            <div class="col-md-9">
+                <div class="form-outline mb-4">
+                    {{ form.ingredients.label_tag }}
+                    {{ form.ingredients }}
+                    {{ form.ingredients.errors }}
+                </div>
             </div>
-            <div class="form-group">
-                {{ form.description }}
-                {{ form.description.errors }}
+            <div class="col-md-3">
+                <div class="row">
+                    <div class="form-outline mb-4">
+                        {{ form.prep_time.label_tag }}
+                        {{ form.prep_time }}
+                        {{ form.prep_time.errors }}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="form-outline mb-4">
+                        {{ form.cook_time.label_tag }}
+                        {{ form.cook_time }}
+                        {{ form.cook_time.errors }}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="form-outline mb-4">
+                        {{ form.servings.label_tag }}
+                        {{ form.servings }}
+                        {{ form.servings.errors }}
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                {{ form.ingredients }}
-                {{ form.ingredients.errors }}
-            </div>
-            <div class="form-group">
-                {{ form.instructions }}
-                {{ form.instructions.errors }}
-            </div>
-            <div class="form-group">
-                {{ form.prep_time }}
-                {{ form.prep_time.errors }}
-            </div>
-            <div class="form-group">
-                {{ form.cook_time }}
-                {{ form.cook_time.errors }}
-            </div>
-            <div class="form-group">
-                {{ form.servings }}
-                {{ form.servings.errors }}
-            </div>
-            <div class="form-group">
-                {{ form.image }}
-                {{ form.image.errors }}
-            </div>
+        </div>
+
+        <div class="form-outline mb-4">
+            {{ form.instructions.label_tag }}
+            {{ form.instructions }}
+            {{ form.instructions.errors }}
+        </div>
+
+        <div class="form-outline mb-4">
+            {{ form.image.label_tag }}
+            {{ form.image }}
+            {{ form.image.errors }}
+        </div>
 
     <button class="btn btn-dark">Save changes</button>
     </form>
-    <p>
+    <p class="mt-3">
         <a href="{% url 'recipe_delete' recipe.slug %}" class="btn btn-danger text-dark"> DELETE </a>
     </p>
-    </div>
+
 
 {% endblock %}
