--- a/MommysCookbookProject/user_auth/templates/user_auth/user_login.html
+++ b/MommysCookbookProject/user_auth/templates/user_auth/user_login.html
@@ -1,12 +1,10 @@
-{% extends "base.html" %}
+{% extends "overlay_small.html" %}
 {% load custom_filters %}
 {% load static %}
 
 {% block main-content %}
 
-<div style="max-width: 24rem">
-
-{#todo: errormessages not centered#}
+<div style="max-width: 24rem; margin: auto">
 
     <h3 class="text-center">Welcome to <br> Mommy's cookbook!</h3>
     <h6 class="text-center mb-4">
