--- a/MommysCookbookProject/user_auth/templates/user_auth/user_register.html
+++ b/MommysCookbookProject/user_auth/templates/user_auth/user_register.html
@@ -1,10 +1,10 @@
-{% extends "base.html" %}
+{% extends "overlay_small.html" %}
 {% load custom_filters %}
 {% load static %}
 
 {% block main-content %}
 
-<div style="max-width: 24rem">
+<div style="max-width: 24rem" class="mx-auto">
     <h3 class="text-center">Welcome to <br> Mommy's cookbook!</h3>
     <h4 class="text-center mb-3">Create new profile</h4>
 
